<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="DFB_FacilityAlarmBool" Id="{20e65b03-5745-4832-829b-b3227b33dae5}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK DFB_FacilityAlarmBool
VAR_INPUT
	Sec_P					: BOOL; // Second pulse
	TbotNo					: INT; // 1: Tbot left, 2: Tbot right
	InputWarning			: BOOL;
	InputAlarm				: BOOL;
	WarningTimer			: UDINT;
	AlarmTimer				: UDINT;
	AbortTimer				: UDINT;
	LogName					: STRING;
	ModuleID				: E_ModuleID;
	EventName				: E_EventName;
END_VAR

VAR_OUTPUT
	OutputWarning			: BOOL;
	OutputAlarm				: BOOL;
	OutputAbort				: BOOL;
END_VAR

VAR
	_State_Changed			: BOOL;
	
	_State					: INT;
	_Last_State				: INT;
	_TLast_State			: INT;
	
	_State_Timer			: UDINT;
	
	_EmptyEvent				: ST_Event;
	
	_TON_Warning			: TON;
	_TON_Alarm				: TON;				
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//	State timer
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

_State_Changed									:= _State <> _TLast_State;
_TLast_State									:= _State;

IF _State_Changed THEN
	_State_Timer								:= 0;
	Logging.fbDebugLog.M_nLogger(iLogLevel:= iLogVerbosity, sSource:= ' SEQ Log ', 
		sMessage								:= CONCAT(CONCAT(LogName, 'current state['),
														 CONCAT(INT_TO_STRING(_State), ']'))); 
	
ELSE
	IF Sec_P THEN
		_State_Timer							:= _State_Timer + 1;
	END_IF
END_IF

///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//	State case
///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

CASE _State OF
	0: (*Idle*)
	
		(*Action*)
		OutputWarning							:= FALSE;
		OutputAlarm								:= FALSE;
		OutputAbort								:= FALSE;
		_TON_Warning(IN:= FALSE, PT:= UDINT_TO_TIME(WarningTimer * 1000));
		
		(*Transition*)
		IF InputAlarm THEN
			_TON_Warning(IN:= TRUE, PT:= UDINT_TO_TIME(WarningTimer * 1000));
			_State								:= 21; // Alarm - Delay
		ELSIF InputWarning THEN
			_TON_Warning(IN:= TRUE, PT:= UDINT_TO_TIME(WarningTimer * 1000));
			_State								:= 11; // Warning - Delay
		END_IF
		
	11: (*Warning - Delay*)
		_Last_State								:= 11;
		
		(*Action*)
		OutputWarning							:= FALSE;
		OutputAlarm								:= FALSE;
		OutputAbort								:= FALSE;
		_TON_Warning(IN:= TRUE, PT:= UDINT_TO_TIME(WarningTimer * 1000));
		
		(*Transition*)
		IF (NOT InputWarning) THEN
			_State								:= 0; // Idle
		ELSIF InputAlarm THEN
			_State								:= 21; // Alarm - Delay
		ELSIF _State_Timer >= WarningTimer THEN
			_State								:= 22; // Warning - Send Event
		END_IF
	
	21: (*Alarm - Delay*)
		_Last_State								:= 21;
		
		(*Action*)
		OutputWarning							:= FALSE;
		OutputAlarm								:= FALSE;
		OutputAbort								:= FALSE;
		
		(*Transition*)
		IF (NOT InputAlarm) THEN
			IF InputWarning THEN
				_State							:= 11; // Warning - Delay
			ELSE
				_State							:= 0; // Idle
			END_IF
		ELSIF _State_Timer >= AlarmTimer THEN
			_State								:= 24; // Alarm - Send Event
		END_IF
	
	22:	(*Warning - Send Event*)
		_Last_State								:= 22;
		
		(*Action*)
		OutputWarning							:= TRUE;
		OutputAlarm								:= FALSE;
		OutputAbort								:= FALSE;
		
		// Event - AbortInProgress
		CmdAndEventProcess.fbCmdAndEventUpdate.M_AddEvent(
			sLogName							:= LogName, 
			eEventName							:= EventName, 
			eModuleID							:= ModuleID, 
			iParam								:= _EmptyEvent.iParam,
			sParam								:= _EmptyEvent.sParam, 
			bParam								:= _EmptyEvent.bParam, 
			dParam								:= _EmptyEvent.dParam,
			sFailReason							:= '');
		
		(*Transition*)
		_State									:= 25; // Warning - Check abort time
		
	24: (*Alarm - Send Event*)
		_Last_State								:= 24;
		
		(*Action*)
		OutputWarning							:= FALSE;
		OutputAlarm								:= TRUE;
		OutputAbort								:= FALSE;
		
		// Event - AbortInProgress
		CmdAndEventProcess.fbCmdAndEventUpdate.M_AddEvent(
			sLogName							:= LogName, 
			eEventName							:= EventName, 
			eModuleID							:= ModuleID, 
			iParam								:= _EmptyEvent.iParam,
			sParam								:= _EmptyEvent.sParam, 
			bParam								:= _EmptyEvent.bParam, 
			dParam								:= _EmptyEvent.dParam,
			sFailReason							:= '');
		
		(*Transition*)
		_State									:= 26; // Alarm - Check abort time
		
	25: (*Warning - Check abort time*)
		_Last_State								:= 25;
		
		(*Action*)
		OutputWarning							:= TRUE;
		OutputAlarm								:= FALSE;
		OutputAbort								:= FALSE;
		
		(*Transition*)
		IF _State_Timer >= AbortTimer THEN
			_State								:= 40; // Abort - Warning
		END_IF
		
	26: (*Alarm - Check abort time*)
		_Last_State								:= 26;
		
		(*Action*)
		OutputWarning							:= FALSE;
		OutputAlarm								:= TRUE;
		OutputAbort								:= FALSE;
		
		(*Transition*)
		IF _State_Timer >= AbortTimer THEN
			_State								:= 41; // Abort - Alarm
		END_IF
		
	40: (*Abort - Warning*)
		_Last_State								:= 40;
		
		(*Action*)
		OutputWarning							:= TRUE;
		OutputAlarm								:= FALSE;
		OutputAbort								:= TRUE;
		
		(*Transition*)
		IF (NOT InputWarning) THEN
			_State								:= 0; // Idle
		END_IF
		
	41: (*Abort - Alarm*)
		_Last_State								:= 41;
		
		(*Action*)
		OutputWarning							:= FALSE;
		OutputAlarm								:= TRUE;
		OutputAbort								:= TRUE;
		
		(*Transition*)
		IF (NOT InputWarning) THEN
			_State								:= 0; // Idle
		END_IF
END_CASE]]></ST>
    </Implementation>
    <LineIds Name="DFB_FacilityAlarmBool">
      <LineId Id="9" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="29" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="177" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="179" Count="1" />
      <LineId Id="178" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="34" Count="3" />
      <LineId Id="176" Count="0" />
      <LineId Id="41" Count="2" />
      <LineId Id="39" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="46" Count="0" />
      <LineId Id="48" Count="1" />
      <LineId Id="53" Count="1" />
      <LineId Id="99" Count="0" />
      <LineId Id="395" Count="0" />
      <LineId Id="50" Count="1" />
      <LineId Id="55" Count="0" />
      <LineId Id="431" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="58" Count="0" />
      <LineId Id="432" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="363" Count="2" />
      <LineId Id="100" Count="0" />
      <LineId Id="396" Count="0" />
      <LineId Id="70" Count="1" />
      <LineId Id="75" Count="3" />
      <LineId Id="80" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="66" Count="0" />
      <LineId Id="84" Count="2" />
      <LineId Id="366" Count="2" />
      <LineId Id="101" Count="0" />
      <LineId Id="90" Count="2" />
      <LineId Id="369" Count="0" />
      <LineId Id="373" Count="0" />
      <LineId Id="371" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="370" Count="0" />
      <LineId Id="96" Count="1" />
      <LineId Id="83" Count="0" />
      <LineId Id="225" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="226" Count="0" />
      <LineId Id="228" Count="0" />
      <LineId Id="374" Count="2" />
      <LineId Id="229" Count="1" />
      <LineId Id="323" Count="0" />
      <LineId Id="467" Count="7" />
      <LineId Id="244" Count="2" />
      <LineId Id="231" Count="0" />
      <LineId Id="222" Count="0" />
      <LineId Id="105" Count="2" />
      <LineId Id="377" Count="2" />
      <LineId Id="103" Count="0" />
      <LineId Id="139" Count="1" />
      <LineId Id="475" Count="7" />
      <LineId Id="311" Count="0" />
      <LineId Id="111" Count="0" />
      <LineId Id="113" Count="1" />
      <LineId Id="116" Count="1" />
      <LineId Id="119" Count="1" />
      <LineId Id="380" Count="2" />
      <LineId Id="118" Count="0" />
      <LineId Id="124" Count="4" />
      <LineId Id="247" Count="0" />
      <LineId Id="249" Count="2" />
      <LineId Id="383" Count="2" />
      <LineId Id="255" Count="4" />
      <LineId Id="248" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="131" Count="2" />
      <LineId Id="389" Count="2" />
      <LineId Id="130" Count="0" />
      <LineId Id="137" Count="1" />
      <LineId Id="145" Count="2" />
      <LineId Id="260" Count="0" />
      <LineId Id="262" Count="2" />
      <LineId Id="386" Count="2" />
      <LineId Id="268" Count="4" />
      <LineId Id="261" Count="0" />
      <LineId Id="47" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>